<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FlickrjAndroidSampleActivity!</string>
    <string name="app_name">WhereUClicked</string>
    <string name="user_profile_view_name">User Profile</string>
    <string name="main_no_items">No pictures to display</string>
     <string name="username">Email Address</string>
      <string name="password">Password</string>
      <string name="confirmpassword">Confirm Password</string>
       <string name="signin">Sign In</string>
      <string name="signup">Sign Up</string>
       <string name="forgotpassword">Forgot Password</string>
        <string name="empty">You do not have any Geo Tagged Photos</string>
    

    <!-- buttons -->
    <string name="btn_refresh_user_profile_title">Refresh</string>
    <string name="btn_add_more">Add More</string>
    <string name="title_activity_selection">WhereUClicked</string>
    <string name="cities">Cities</string>
    <string name="map"></string>
    <string name="logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_geo">GeoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city_adapter">CityAdapter</string>
    <string name="title_activity_photos_map">PhotosMapActivity</string>
    <string name="imageview">ImageView</string>
    <string name="mapview">MapVeiw</string>
     <string name="authorize">You have not authorized! Please click below to authorize</string>
      <string name="authorizebtn">Authorize</string>
       <string name="unauthorizebtn">Un Authorize</string>
        <string name="confirm">Confirm Authorization</string>
       <string name="title_authorize">Authorize</string>
	  <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Authorize</item>
        <item >Cities</item>
        <item >Logout</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_authorize</item>
        <item>@drawable/ic_cities</item>
        <item>@drawable/ic_logout</item>
        
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
</resources>
