<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffBE80FF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.madproject.LoginFragment" >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/confirmpassword"
        android:layout_marginTop="49dp"
        android:background="#ff7e51c2"
        android:text="@string/signup"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
       android:text="@string/signin"
        android:textColor="#ffffffff"
         android:background="#ff7e51c2"
        android:textStyle="bold" />

</RelativeLayout>
